WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58220
[GStreamer] warnings in media/video-set-rate-from-pause.html
https://bugs.webkit.org/show_bug.cgi?id=58220
Summary
[GStreamer] warnings in media/video-set-rate-from-pause.html
Philippe Normand
Reported
2011-04-11 00:45:17 PDT
(DumpRenderTree:12453): GStreamer-CRITICAL **: gst_event_new_seek: assertion `rate != 0.0' failed (DumpRenderTree:12453): GStreamer-CRITICAL **: gst_element_send_event: assertion `event != NULL' failed
Attachments
proposed patch
(2.16 KB, patch)
2011-04-11 01:18 PDT
,
Philippe Normand
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2011-04-11 01:18:38 PDT
Created
attachment 88975
[details]
proposed patch
Philippe Normand
Comment 2
2011-04-12 00:50:28 PDT
Committed
r83560
: <
http://trac.webkit.org/changeset/83560
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug