2011-04-11  Philippe Normand  <pnormand@igalia.com>

Reviewed by Martin Robinson.

        [GStreamer] warnings in media/video-set-rate-from-pause.html
        https://bugs.webkit.org/show_bug.cgi?id=58220

        * platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::MediaPlayerPrivateGStreamer::setRate): Pause the
        pipeline if new rate is zero, like advised in the GStreamer
        documentation of gst_event_new_seek().

Canonical link: https://commits.webkit.org/73320@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83560 268f45cc-cd09-0410-ab3c-d52691b4dbfc